.metadata/.plugins/org.eclipse.cdt.ui/estructuras.build.log
11:54:58 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
..\src\estructuras.c: In function 'cargarAlumno':
..\src\estructuras.c:48:17: warning: passing argument 1 of 'scanf' makes pointer from integer without a cast [-Wint-conversion]
   48 |   scanf(pAlumno1->sexo);
      |         ~~~~~~~~^~~~~~
      |                 |
      |                 char
In file included from ..\src\estructuras.c:11:
c:\mingw\include\stdio.h:700:48: note: expected 'const char *' but argument is of type 'char'
  700 | _CRTIMP __cdecl __MINGW_NOTHROW  int    scanf (const char *, ...);
      |                                                ^~~~~~~~~~~~
..\src\estructuras.c: In function 'mostrarAlumno':
..\src\estructuras.c:65:20: warning: comparison between pointer and integer
   65 |  if(alumno1.legajo !=NULL && alumno1.nombre != NULL && alumno1.sexo != NULL && alumno1.nota1 != NULL
      |                    ^~
..\src\estructuras.c:65:69: warning: comparison between pointer and integer
   65 |  if(alumno1.legajo !=NULL && alumno1.nombre != NULL && alumno1.sexo != NULL && alumno1.nota1 != NULL
      |                                                                     ^~
..\src\estructuras.c:65:94: warning: comparison between pointer and integer
   65 |  if(alumno1.legajo !=NULL && alumno1.nombre != NULL && alumno1.sexo != NULL && alumno1.nota1 != NULL
      |                                                                                              ^~
..\src\estructuras.c:66:20: warning: comparison between pointer and integer
   66 |   && alumno1.nota2 != NULL && alumno1.promedio != NULL)
      |                    ^~
..\src\estructuras.c:66:48: error: invalid operands to binary != (have 'float' and 'void *')
   66 |   && alumno1.nota2 != NULL && alumno1.promedio != NULL)
      |                               ~~~~~~~~~~~~~~~~ ^~
      |                                      |
      |                                      float

11:54:58 Build Failed. 1 errors, 5 warnings. (took 309ms)

